<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/view_toolbar" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/commentsView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/emptyContentView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_comments_symbol"
                android:textColor="@color/white"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/no_comments"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />


        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/toolbarBackground"
            android:elevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:visibility="visible">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/commentLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:textColorHint="@color/white"
                    app:counterEnabled="true"
                    app:counterMaxLength="200"
                    app:counterOverflowTextAppearance="@style/CounterOverflowStyle"
                    app:counterTextAppearance="@style/CounterStyle"
                    app:errorTextAppearance="@style/EditTextErrorAppearance">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/newComment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:hint="@string/new_comment"
                        android:maxLength="200"
                        android:textColor="@color/white" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/addNewComment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="8dp"
                    android:src="@android:drawable/ic_menu_send"
                    android:tint="@color/white"
                    app:fabSize="normal" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <include
        android:id="@+id/progressView"
        layout="@layout/view_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>